@@ -9,6 +9,10 @@ import com.faf223.expensetrackerfaf.model.User;
 import com.faf223.expensetrackerfaf.service.ExpenseCategoryService;
 import com.faf223.expensetrackerfaf.service.ExpenseService;
 import com.faf223.expensetrackerfaf.service.UserService;
+import com.faf223.expensetrackerfaf.util.errors.ErrorResponse;
+import com.faf223.expensetrackerfaf.util.exceptions.TransactionNotCreatedException;
+import com.faf223.expensetrackerfaf.util.exceptions.TransactionNotUpdatedException;
+import com.faf223.expensetrackerfaf.util.exceptions.TransactionsNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -19,8 +23,11 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.LocalDate;
+import java.time.Month;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RestController
@@ -38,13 +45,16 @@ public class ExpenseController {
     public ResponseEntity<List<ExpenseDTO>> getAllExpenses() {
         List<ExpenseDTO> expenses = expenseService.getTransactions().stream().map(expenseMapper::toDto).collect(Collectors.toList());
         if (!expenses.isEmpty()) return ResponseEntity.ok(expenses);
-        else return ResponseEntity.notFound().build();
+        else throw new TransactionsNotFoundException("Transactions not found");
     }
 
     @PostMapping()
     public ResponseEntity<Void> createNewExpense(@RequestBody ExpenseCreationDTO expenseDTO,
                                                        BindingResult bindingResult) {
         Expense expense = expenseMapper.toExpense(expenseDTO);
+
+        if(bindingResult.hasErrors())
+            throw new TransactionNotCreatedException(ErrorResponse.from(bindingResult).getMessage());
 
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
 
@@ -58,7 +68,7 @@ public class ExpenseController {
             return ResponseEntity.status(HttpStatus.CREATED).build();
         }
 
-        return ResponseEntity.notFound().build();
+        throw new TransactionNotCreatedException("Could not create new expense");
     }
 
 
@@ -67,6 +77,9 @@ public class ExpenseController {
     public ResponseEntity<Void> updateExpense(@PathVariable long id, @RequestBody ExpenseCreationDTO expenseDTO,
                                                     BindingResult bindingResult) {
         Expense expense = expenseService.getTransactionById(id);
+
+        if(expense == null) throw new TransactionsNotFoundException("The expense has not been found");
+
         ExpenseCategory category = expenseCategoryService.getCategoryById(expenseDTO.getExpenseCategory());
         expense.setCategory(category);
         expense.setAmount(expenseDTO.getAmount());
@@ -75,19 +88,24 @@ public class ExpenseController {
             expenseService.createOrUpdate(expense);
             return ResponseEntity.status(HttpStatus.CREATED).build();
         } else {
-            return ResponseEntity.notFound().build();
+            throw new TransactionNotUpdatedException(ErrorResponse.from(bindingResult).getMessage());
         }
     }
 
     @GetMapping("/personal-expenses")
-    public ResponseEntity<List<ExpenseDTO>> getExpensesByUser() {
+    public ResponseEntity<List<ExpenseDTO>> getExpensesByUser(@RequestParam Optional<LocalDate> date,
+                                                              @RequestParam Optional<Month> month) {
 
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
 
         if (authentication != null && authentication.getPrincipal() instanceof UserDetails userDetails) {
 
             String email = userDetails.getUsername();
-            List<ExpenseDTO> expenses = expenseService.getTransactionsByEmail(email).stream().map(expenseMapper::toDto).collect(Collectors.toList());
+            List<ExpenseDTO> expenses;
+
+            expenses = date.map(localDate -> expenseService.getTransactionsByDate(localDate).stream().map(expenseMapper::toDto).toList())
+                    .orElseGet(() -> month.map(value -> expenseService.getTransactionsByMonth(value).stream().map(expenseMapper::toDto).toList())
+                            .orElseGet(() -> expenseService.getTransactionsByEmail(email).stream().map(expenseMapper::toDto).toList()));
 
             if (!expenses.isEmpty()) {
                 return ResponseEntity.ok(expenses);
@@ -96,14 +114,14 @@ public class ExpenseController {
             }
         }
 
-        return ResponseEntity.notFound().build();
+        throw new TransactionsNotFoundException("The expenses have not been found");
     }
 
     @GetMapping("/categories")
     public ResponseEntity<List<ExpenseCategory>> getAllCategories() {
         List<ExpenseCategory> categories = expenseCategoryService.getAllCategories();
         if (!categories.isEmpty()) return ResponseEntity.ok(categories);
-        else return ResponseEntity.notFound().build();
+        else throw new TransactionsNotFoundException("The expenses have not been found");
     }
 
     @DeleteMapping("/delete/{id}")
